fix transpotration and recording